--- a/css/styles.css
+++ b/css/styles.css
@@ -10996,7 +10996,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/header-bg.jpg");
+  background-image: url("../image/farm.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
